Fixing the Oct cfg file (Note: should also fix June one to also have hodo data, but hodo data is broken, so it's not that important)

--- a/TBcfg/vfe_Oct_test.cfg
+++ b/TBcfg/vfe_Oct_test.cfg
@@ -1,7 +1,7 @@
 <h4reco>
-outNameSuffix ntuples/vfe_35_
-#path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Jun2017/raw/DataTree/
-path2data  /afs/cern.ch/user/k/kyee/H4Analysis/raw/
+outNameSuffix ntuples/oct_15_
+path2data /eos/cms/store/group/dpg_ecal/comm_ecal/upgrade/testbeam/ECALTB_H4_Oct2017/data/raw/DataTree/
+#path2data  /afs/cern.ch/user/k/kyee/H4Analysis/raw/
 #path2data ./data/raw/DataTree/
 pluginList H4Hodo WireChamber DigiRecoVFE WFRecoVFE
 run 5951
